--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -11,33 +11,155 @@
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light bordered">
                         <div class="portlet-title">
-                            <div class="caption font-red-sunglo">
-                                <i class="icon-settings font-red-sunglo"></i>
-                                <span class="caption-subject bold uppercase"> Accept</span>
+                            <div class="caption ">
+                                <!--<i class="icon-settings font-red-sunglo"></i>-->
+                                <span class=" uppercase"> Few words about my son</span>
                             </div>
                             <div class="actions">
                                 <div class="btn-group">
-                                    <a class="btn btn-sm green dropdown-toggle" href="javascript:;" data-toggle="dropdown"> Actions
-                                        <i class="fa fa-angle-down"></i>
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                            > Edit
+
                                     </a>
-                                    <ul class="dropdown-menu pull-right">
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
-                                        </li>
-                                        <li>
-                                            <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"> </li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
-                                        </li>
-                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> Basic details</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                            > Edit
+
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> Location</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                       > Edit
+
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> Religious information</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                       > Edit
+
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> Professional information</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                       > Edit
+
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> Family Details</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                       > Edit
+
+                                    </a>
+
+                                </div>
+                            </div>
+                        </div>
+                        <div class="portlet-body form">
+
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md-12 ">
+                    <!-- BEGIN SAMPLE FORM PORTLET-->
+                    <div class="portlet light bordered">
+                        <div class="portlet-title">
+                            <div class="caption ">
+                                <span class=" uppercase"> About Family</span>
+                            </div>
+                            <div class="actions">
+                                <div class="btn-group">
+                                    <a class="btn btn-sm red " href="javascript:;"
+                                       > Edit
+
+                                    </a>
+
                                 </div>
                             </div>
                         </div>
