--- a/src/app/navigation/profile/profileNavigation.html
+++ b/src/app/navigation/profile/profileNavigation.html
@@ -1,80 +1,44 @@
 <div class="page-sidebar-wrapper">
-       <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
-                <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+    <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
+        <div style="background-color: white">
+            <div class="row">
+                <div class="col-md-12 " style="text-align:center;margin-top: 20px">
+                    <img style="width: 100px;height: 130px;!important;" src="assets/images/prof1.jpg"/>
+                </div>
+                <div class="col-md-12  " style="text-align:center;margin-top: 20px">
+                    <span class="bold">Prem Alex</span><br>
+                    (P234567)
+                </div>
+                <div class="col-md-12  " style="text-align:center;margin-top: 20px">
+                    <button class="btn btn-sm red-mint" style="border-radius: 20px"><i class="fa fa-camera"></i> UPLOAD
+                    </button>
+                </div>
+                <div class="col-md-12  "
+                     style="text-align:center;margin-top: 20px;padding-bottom: 20px; border-bottom: 1px solid #eef1f5;">
+                    <button class="btn  " style="border-radius: 20px"> Profile preview</button>
+                </div>
+
+                <div class="col-md-12  " style="margin-top: 20px;margin: 10px">
+                    <div class="row">
+                        <div class="col-md-8">Contact Details</div>
+                        <div class="col-md-3"><a class="btn btn-sm red-mint"> Edit</a>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 20px">
+                        <div class="col-md-8">9876543212</div>
+                        <div class="col-md-4" style="font-size: 9px"><i class="fa fa-check " style="color: green"> </i> verified
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
-                    <li class="nav-item  active open">
-                        <ul class="sub-menu" >
-                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
-                                    <span class="title"><b>Inbox</b></span>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" id="pending">
-                                <a ui-sref="app.pending" class="nav-link ">
-                                    <span class="title">Pending</span>
-                                </a>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/accept')}" class="nav-item " id="accept">
-                                <a ui-sref="app.accept" class="nav-link ">
-                                    <span class="title">Accept</span>
-                                </a>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" id="decline">
-                                <a ui-sref="app.decline" class="nav-link ">
-                                    <span class="title">Decline</span>
-                                </a>
-                            </li>
+        </div>
 
 
-                            <li  style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px" class="nav-item">
-                                    <span class="title"><b>Sent</b></span>
-                            </li>
-                            <li class="nav-item" >
-
-                            </li>
-
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-
-
-                    <li class="nav-item  active open">
-                        <ul class="sub-menu">
-                            <li ng-class="{ active: isActive('/app')}" class="nav-item " id="inbox">
-                                <a ui-sref="app" class="nav-link ">
-                                    <span class="title">Inbox</span>
-                                </a>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" id="pending">
-                                <a ui-sref="app.pending" class="nav-link ">
-                                    <span class="title">Pending</span>
-                                </a>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/accept')}" class="nav-item " id="accept">
-                                <a ui-sref="app.accept" class="nav-link ">
-                                    <span class="title">Accept</span>
-                                </a>
-                            </li>
-                            <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" id="decline">
-                                <a ui-sref="app.decline" class="nav-link ">
-                                    <span class="title">Decline</span>
-                                </a>
-                            </li>
-                            <!--<li class="nav-item  ">-->
-                            <!--<a href="layout_boxed_page.html" class="nav-link ">-->
-                            <!--<span class="title">Boxed Page</span>-->
-                            <!--</a>-->
-                            <!--</li>-->
-                            <!--<li class="nav-item  active open">-->
-                            <!--<a href="layout_blank_page.html" class="nav-link ">-->
-                            <!--<span class="title">Blank Page</span>-->
-                            <!--<span class="selected"></span>-->
-                            <!--</a>-->
-                            <!--</li>-->
-                        </ul>
-                    </li>
-                </ul>
-        <!-- END SIDEBAR MENU -->
     </div>
-    <!-- END SIDEBAR -->
+
+    <!-- END SIDEBAR MENU -->
+</div>
+<!-- END SIDEBAR -->
 </div>
