--- a/src/app/navigation/search/searchNavigation.html
+++ b/src/app/navigation/search/searchNavigation.html
@@ -1,80 +1,61 @@
 <div class="page-sidebar-wrapper">
     <div class="page-sidebar navbar-collapse collapse" style="border-radius: 10px">
-        <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+
+        <div class="row" style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
+            <div class="col-md-12 bold" style="text-align: center;">My Saved Searches</div>
+        </div>
+
+        <div class="row" style="background-color:white;padding: 9px 14px 9px 9px;">
+            <div class="col-md-12 " style="border-bottom: 1px solid #ddd;padding-bottom: 10px;padding-top: 10px">
+                <div class="row">
+                    <div class="col-md-8">
+                        <span class="bold">Search1</span>
+                        <br/>
+                        <br/>
+                        <span><a style="color: red">Edit</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                                style="color: red">Delete</a></span>
+                    </div>
+                    <div class="col-md4" style="line-height: 50px;text-align: center">
+                        <button class="btn btn-sm red">Search</button>
+                    </div>
 
 
-            <li class="nav-item  active open">
-                <ul class="sub-menu" >
-                    <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
-                        <span class="title"><b>Inbox</b></span>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" id="pending">
-                        <a ui-sref="app.pending" class="nav-link ">
-                            <span class="title">Pending</span>
-                        </a>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/accept')}" class="nav-item " id="accept">
-                        <a ui-sref="app.accept" class="nav-link ">
-                            <span class="title">Accept</span>
-                        </a>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" id="decline">
-                        <a ui-sref="app.decline" class="nav-link ">
-                            <span class="title">Decline</span>
-                        </a>
-                    </li>
+                </div>
+            </div>
+            <div class="col-md-12 " style="border-bottom: 1px solid #ddd;padding-bottom: 10px;padding-top: 10px">
+                <div class="row">
+                    <div class="col-md-8">
+                        <span class="bold">Search1</span>
+                        <br/>
+                        <br/>
+                        <span><a style="color: red">Edit</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                                style="color: red">Delete</a></span>
+                    </div>
+                    <div class="col-md4" style="line-height: 50px;text-align: center">
+                        <button class="btn btn-sm red">Search</button>
+                    </div>
 
 
-                    <li  style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px" class="nav-item">
-                        <span class="title"><b>Sent</b></span>
-                    </li>
-                    <li class="nav-item" >
-
-                    </li>
-
-                </ul>
-            </li>
-        </ul>
-        <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
+                </div>
+            </div>
 
 
-            <li class="nav-item  active open">
-                <ul class="sub-menu">
-                    <li ng-class="{ active: isActive('/app')}" class="nav-item " id="inbox">
-                        <a ui-sref="app" class="nav-link ">
-                            <span class="title">Inbox</span>
-                        </a>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" id="pending">
-                        <a ui-sref="app.pending" class="nav-link ">
-                            <span class="title">Pending</span>
-                        </a>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/accept')}" class="nav-item " id="accept">
-                        <a ui-sref="app.accept" class="nav-link ">
-                            <span class="title">Accept</span>
-                        </a>
-                    </li>
-                    <li ng-class="{ active: isActive('/app/decline')}" class="nav-item" id="decline">
-                        <a ui-sref="app.decline" class="nav-link ">
-                            <span class="title">Decline</span>
-                        </a>
-                    </li>
-                    <!--<li class="nav-item  ">-->
-                    <!--<a href="layout_boxed_page.html" class="nav-link ">-->
-                    <!--<span class="title">Boxed Page</span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                    <!--<li class="nav-item  active open">-->
-                    <!--<a href="layout_blank_page.html" class="nav-link ">-->
-                    <!--<span class="title">Blank Page</span>-->
-                    <!--<span class="selected"></span>-->
-                    <!--</a>-->
-                    <!--</li>-->
-                </ul>
-            </li>
-        </ul>
-        <!-- END SIDEBAR MENU -->
+
+        </div>
+
+        <div class="row" style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 9px;margin-top:10px">
+            <div class="col-md-12 bold" style="text-align: center;">Search by ID</div>
+        </div>
+
+        <div class="row" style="background-color:white;padding: 9px 14px 9px 9px;">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Enter ID">
+                                                    <span class="input-group-btn">
+                                                        <button class="btn red" type="button">Go</button>
+                                                    </span>
+            </div>
+
+        </div>
+        </div>
+        <!-- END SIDEBAR -->
     </div>
-    <!-- END SIDEBAR -->
-</div>
