--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -4,36 +4,36 @@
 
 
                     <li class="nav-item  active open">
-                        <ul class="sub-menu" >
+                        <ul class="sub-menu settingnav" >
                             <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
                                     <span class="title"><b>Settings</b></span>
                             </li>
-                            <li style="border-left: solid;color: red" ng-class="{ active: isActive('/settings')}" class="nav-item " id="inbox">
+                            <li  ng-class="{ activateSettingNavBar: isActive('/settings')}" class="nav-item " id="inbox">
                                 <a ui-sref="settings" class="nav-link ">
-                                    <span class="" style="color: red">Account settings</span>
+                                    <span >Account settings</span>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/emailalerts')}" class="nav-item" id="pending">
                                 <a ui-sref="settings.emailalerts" class="nav-link ">
                                     <span class="title">Manage Email Alerts</span>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('settings/contactFilters')}" class="nav-item " id="accept">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/contactFilters')}" class="nav-item " id="accept">
                                 <a ui-sref="settings.contactFilters" class="nav-link ">
                                     <span class="title">Contact Filters</span>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('settings/privacySettings')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/privacySettings')}" class="nav-item" id="decline">
                                 <a ui-sref="settings.privacySettings" class="nav-link ">
                                     <span class="title">Privacy Settings</span>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('settings/membershipDetails')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/membershipDetails')}" class="nav-item" id="decline">
                                 <a ui-sref="settings.membershipDetails" class="nav-link ">
                                     <span class="title">Membership Details</span>
                                 </a>
                             </li>
-                            <li ng-class="{ active: isActive('/settings/deactivateProfile')}" class="nav-item" id="decline">
+                            <li ng-class="{ activateSettingNavBar: isActive('/settings/deactivateProfile')}" class="nav-item" id="decline">
                                 <a ui-sref="settings.deactivateProfile" class="nav-link ">
                                     <span class="title">Deactivate Profiles</span>
                                 </a>
